--- a/why.html
+++ b/why.html
@@ -23,10 +23,11 @@
     <div class="jumbotron">
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;&nbsp;</h1>
       <h1 class="display-4" style="color: #B84602">Why Information Technology?</h1>
-<p class="lead"> However you've found your way to myGithub Pages profile you are here now.</p>
-      <p class="lead">Before you begin clicking around the different pages that comprise this assessment though, take a moment to read the short few paragraphs below as they summarize the content you will find as well as tell you a little about myself.&nbsp; &nbsp;&nbsp;</p>
-<p class="lead">&nbsp; </p>
-      <p class="lead">&nbsp;</p>
+<p class="lead"> Since I was 13 and received a Commodore VIC20 for christmas one yet I've been interested in technology and have watched what was a boxy machine with 4 kilobytes of RAM evolve over time to the APPLE IIE we used in school with the green monochrome monitors built into the computer itself, to the x386, x486 then Pentium home towers we built ourselves.</p>
+<p class="lead">The entire time all this was happening I've seen the online world transform from dialup bulliten boards that meant nobody else in the house could use the phone while you were online and dialup games that suddenly changed into Quake1, then two, then OpenGL came around just before the internet evolved again into cable - broadband was born.</p>
+<p class="lead">Since then I've watched information technology leap-frog its former self again and again to the point we now havedrones with stereoscopic cameras and stereoscopic virtual reality headsets to match that can stream live video from the airbourn drone to your eyes: over the past 30 years or more there's never been a time I haven't been interested in technology and watching as all the various aspects merge to work together has made IT more intriguing than ever.</p>
+<p class="lead">This is why I applied for a Bachelor of IT at RMIT and though I may be a day late with assignments or fall behind and have to subsequently catch-up on modules and excercises, I still can't think of any other industry I'd be more consistently interested in working in, and so there you have it.</p>
+<p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
