--- a/dreamjob.html
+++ b/dreamjob.html
@@ -23,8 +23,10 @@
     <div class="jumbotron">
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;</h1>
       <h1 class="display-4" style="color: #B84602">Ideal Job</h1>
-<p class="lead"> My dream job is programming front and backends for websites from a $7,000 laptop with a huge battery that goes everywhere with me so I can work from a cafe, a national park lookout, public libraries or anywhere else there's a flat surface to put the device on.</p>
-<p class="lead">I probably won't have time to trawl seek.com for an actual position, but I will if there's time after doing the other two pages and before 11:59 tonight.</p>
+<p class="lead"> My dream job is difficult to pin-down with a detailed list of tasks or simple job description because I grow nored quite easily so ideally would appreciate a job that allows for that as well as my personality, which doesn't allow me to slowly, steadily chip away at a given task in a reliable manner but instead delivers concentrated mental focus and energy in cycles or waves: while awash in one of these waves I can get an extraordinary amount of work done and get it done with perfect enthusiasm, but when the wave is gone I step back, look and wonder whether what I'm doing is really a worthwhile way to be spending my time - paid work or not.</p>
+<p class="lead">Given a $150,000/year salary to program front and backends from a $7,000 laptop with a massive battery that goes everywhere with me so I can work from cafes, national park lookouts, public libraries or anywhere else there's a flat surface to put the device on, that sounds about right to me though I also realize that not every project is going to appeal to me and in all likeliness most will be straight-up boring: there are plenty of boring people much better suited to being steady, reliable workers - I hate doing things I'm not invested in, personally, and would find a job like that very difficult to remain focused on.</p>
+<p class="lead">Ultimately, my deam job will be a job developing the ideas that come to me while in that "zone" of enhanced mental focus, and then moving on to something new rather than slugging away like a worker ant on someone elses idea. </p>
+<p class="lead"><a href="https://au.indeed.com/viewjob?jk=be1fe4e3f9c4766e&q=Work+From+Home+Coding&tk=1ecc13q1i108f000&from=web&vjs=3" title="The dream Job (for now)" target="new">Frontend Developer</a></p>
 <p class="lead">&nbsp; </p>
       <p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
