--- a/dreamjob.html
+++ b/dreamjob.html
@@ -27,12 +27,16 @@
 <p class="lead">Given a $150,000/year salary to program front and backends from a $7,000 laptop with a massive battery that goes everywhere with me so I can work from cafes, national park lookouts, public libraries or anywhere else there's a flat surface to put the device on, that sounds about right to me though I also realize that not every project is going to appeal to me and in all likeliness most will be straight-up boring: there are plenty of boring people much better suited to being steady, reliable workers - I hate doing things I'm not invested in, personally, and would find a job like that very difficult to remain focused on.</p>
 <p class="lead">Ultimately, my deam job will be a job developing the ideas that come to me while in that "zone" of enhanced mental focus, and then moving on to something new rather than slugging away like a worker ant on someone elses idea. </p>
 <p class="lead">Anyway here is the kind of job I could groan my way through as a stepping stone to a position that pays me to come up with ideas then lets me go and do my own thing because life's too short to put in long hours not having as much fun as you could be having..</p>
-<p class="lead"><a href="https://au.indeed.com/viewjob?jk=be1fe4e3f9c4766e&q=Work+From+Home+Coding&tk=1ecc13q1i108f000&from=web&vjs=3" title="The dream Job (for now)" target="new">Frontend Developer</a></p>
+<p class="lead"><a href="https://au.indeed.com/viewjob?jk=be1fe4e3f9c4766e&q=Work+From+Home+Coding&tk=1ecc13q1i108f000&from=web&vjs=3" title="The dream Job (for now)" target="new">Link: Frontend Developer with Roam Creative in Sydney</a></p>
 <h1 class="display-4" style="color: #B84602">Skill Set</h1>
-<p class="lead">My list of skills is very diverse</p>
+<p class="lead">Having a somewhat obbsessive personality my skillset has become extremely diverse over the years: from cabinetmaking and french-polishing to supervision of other workers to this - web development and technology-related skills that automatically increase the more exposure I've had to various software and platforms over the last several decades.</p>
+<p class="lead">In the interest of simplifying and truncating all these various work and life skills down to what is relevant to Information Technology however, I'll list only the skill-set that's pertinant to computers, programming and design since that's what we're all here for and my team-mates are waiting for this page to be finished so they can write-up the group-members skill activity.
 <ul>
-  <li>ffvfvf</li>
-  <li>frfrfrfrf</li>
+  <li><b>Programming experience</b><br>
+          I've never in my life been held a position as a programmer or IT anything, but a keen interest in complicated things and an interest in computers plus the internet has seen me teaching myself languages like PHP, Perl, C, a little C++ and even Visual Basic back in the day when Windows was the hottest new operating system on the block.<br>
+          I'm also extremely experienced with HTML and CSS though I really don't consider either of them programming languages since they're incapable of logic but rather exist simply as a means of stacking and constructing page elements and making them look nice.</li>
+  <li><b>Systems Experience</b><br>
+          With exposure then interest in the various different devices both from the user side and server, I've grown very confortable with linux and have it installed on my fastest laptop, mostly because the website I've owned and used as a learning sandbox since 2012 runs linux, and with that </li>
   <li>uhuhuh</li>
   </ul>
 <p class="lead">Bla da bla</p>
@@ -43,7 +47,7 @@
       <p class="lead">&nbsp;</p>
     </div>
   </div>
- <!-- footer div -->	  
+ <!-- footer div -->
  <div class="badge-dark" align="center" style="background-color: #5A5244; color: #9B9384; font-weight: 400">﴾ <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> <a id="ftMail" href="mailto:jason@psychaesthetic.com.au" accesskey="M" style="color: #C2C2C2" onclick="copyToClipboard('jason@psychaesthetic.com.au')">Toss me an email</a> or <a id="ftSite" href="https://psychaesthetic.com.au" accesskey="P" target="new"  style="color: #C2C2C2" onclick="copyToClipboard('https://psychaesthetic.com.au/words/diaries/2020/')">visit my personal site</a> <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> ﴿<br />
  </div>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="index.html">Welcome!</a>
@@ -67,11 +71,11 @@
 <!-- body code goes here -->
 
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="jquery-3.4.1.min.js"></script>
 
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="popper.min.js"></script> 
+  <script src="popper.min.js"></script>
   <script src="bootstrap-4.4.1.js"></script>
 </body>
 </html>
