--- a/dreamjob.html
+++ b/dreamjob.html
@@ -32,12 +32,14 @@
 <p class="lead">Having a somewhat obbsessive personality my skillset has become extremely diverse over the years: from cabinetmaking and french-polishing to supervision of other workers to this - web development and technology-related skills that automatically increase the more exposure I've had to various software and platforms over the last several decades.</p>
 <p class="lead">In the interest of simplifying and truncating all these various work and life skills down to what is relevant to Information Technology however, I'll list only the skill-set that's pertinant to computers, programming and design since that's what we're all here for and my team-mates are waiting for this page to be finished so they can write-up the group-members skill activity.
 <ul>
-  <li style="color: #CCC; font-size: 1.33rem"><b>Programming experience</b><br>
+  <li style="color: #AAA; font-size: 1.33rem"><b>Programming experience</b><span style="color: #777"><br>
           I've never in my life been held a position as a programmer or IT anything, but a keen interest in complicated things and an interest in computers plus the internet has seen me teaching myself languages like PHP, Perl, C, a little C++ and even Visual Basic back in the day when Windows was the hottest new operating system on the block.<br>
-          I'm also extremely experienced with HTML and CSS though I really don't consider either of them programming languages since they're incapable of logic but rather exist simply as a means of stacking and constructing page elements and making them look nice.</li>
-  <li style="color: #CCC; font-size: 1.33rem"><b>Systems Experience</b><br>
-          With exposure then interest in the various different devices both from the user side and server, I've grown very confortable with linux and have it installed on my fastest laptop, mostly because the website I've owned and used as a learning sandbox since 2012 runs linux, and with that </li>
-  <li style="color: #CCC; font-size: 1.33rem">uhuhuh</li>
+          I'm also extremely experienced with HTML and CSS though I really don't consider either of them programming languages since they're incapable of logic but rather exist simply as a means of stacking and constructing page elements and making them look nice.</span></li>
+  <li style="color: #AAA; font-size: 1.33rem"><b>Systems Experience</b><span style="color: #777"><br>
+          With exposure then interest in the various different devices both from the user side and server, I've grown very confortable with linux and have it installed on my fastest laptop, mostly because the website I've owned and used as a learning sandbox since 2012 runs linux, and with that </span></li>
+  <li style="color: #AAA; font-size: 1.33rem">uhuhuh<span style="color: #777"><br>
+          Blablabla<br>
+          Blablabla</span></li>
   </ul>
 <p class="lead">...</p>
 <p class="lead">&nbsp; </p>
