--- a/dreamjob.html
+++ b/dreamjob.html
@@ -31,16 +31,16 @@
 <h1 class="display-4" style="color: #B84602">Skill Set</h1>
 <p class="lead">Having a somewhat obbsessive personality my skillset has become extremely diverse over the years: from cabinetmaking and french-polishing to supervision of other workers to this - web development and technology-related skills that automatically increase the more exposure I've had to various software and platforms over the last several decades.</p>
 <p class="lead">In the interest of simplifying and truncating all these various work and life skills down to what is relevant to Information Technology however, I'll list only the skill-set that's pertinant to computers, programming and design since that's what we're all here for and my team-mates are waiting for this page to be finished so they can write-up the group-members skill activity.
-<ul>
-  <li style="color: #888; font-size: 1.33rem"><b>Programming experience</b><span style="color: #666"><br>
+<ul><br>
+  <li style="color: #888; font-size: 1.23rem"><b>Programming experience</b><span style="color: #666"><br>
           I've never in my life been held a position as a programmer or IT anything, but a keen interest in complicated things and an interest in computers plus the internet has seen me teaching myself languages like PHP, Perl, C, a little C++ and even Visual Basic back in the day when Windows was the hottest new operating system on the block.<br>
-          I'm also extremely experienced with HTML and CSS though I really don't consider either of them programming languages since they're incapable of logic but rather exist simply as a means of stacking and constructing page elements and making them look nice.</span></li>
-  <li style="color: #888; font-size: 1.33rem"><b>Systems Experience</b><span style="color: #666"><br>
+          I'm also extremely experienced with HTML and CSS though I really don't consider either of them programming languages since they're incapable of logic but rather exist simply as a means of stacking and constructing page elements and making them look nice.<br></span></li>
+  <li style="color: #888; font-size: 1.23rem"><b>Systems Experience</b><span style="color: #666"><br>
           With exposure then interest in the various different devices both from the user side and server, I've grown very comfortable with linux (as well as windows, of course) because the website I've owned and used as a design sandbox to play with since 2012 now and with that site has come familiarity and experience with the web services that run in most web servers - Apache, MySQL, Cron and Mail - which has led to increased comfort with and knowledge about the interplay between these various software installations over time.<br>
-          Of course, I'm also very experienced with Wordpress, though find it a beginners platform these days.</span></li>
-  <li style="color: #888; font-size: 1.33rem"><b>Visual Design Experience</b><span style="color: #666"><br>
+          Of course, I'm also very experienced with Wordpress, though find it a beginners platform these days.<br></span></li>
+  <li style="color: #888; font-size: 1.23rem"><b>Visual Design Experience</b><span style="color: #666"><br>
           Part of creating and experimenting with web-sites is making them look good and from the early days of the internet - when Macromedia Flash was the king of high-polish content delivery - I've been learning all the various design software, while my understanding of Cascading Style Sheets and what can be done with them has grown as I've experimented with so many site layouts and designs.<br>
-          Blablabla</span></li>
+          Blablabla<br></span></li>
   </ul>
 <p class="lead">...</p>
 <p class="lead">&nbsp; </p>
