--- a/dreamjob.html
+++ b/dreamjob.html
@@ -40,9 +40,9 @@
           Of course, I'm also very experienced with Wordpress, though find it a beginners platform these days.<br></span></li>
   <li style="color: #888; font-size: 1.23rem"><b>Visual Design Experience</b><span style="color: #666"><br>
           Part of creating and experimenting with web-sites is making them look good and from the early days of the internet - when Macromedia Flash was the king of high-polish content delivery - I've been learning all the various design software, while my understanding of Cascading Style Sheets and what can be done with them has grown as I've experimented with so many site layouts and designs.<br>
-          Blablabla<br></span></li>
+          </span></li>
   </ul>
-<p class="lead">...</p>
+<p class="lead">Specific IT related software and technologies I'm experienced with include <u>Photoshop</u>, <u>Eclipse IDE</u>, <u>Dreamweaver</u>, <u>Microsoft Office</u>, <u>Wordpress</u>, <u>3D Studio MAX</u>, <u>Autodesk Sketchbook Pro</u>, <u>Cascading Style Sheets (CSS)</u> and their editing, <u>Bootstrap</u> and <u>Sass</u>, <u>HTML</u>, <u>Server-side Scripting</u> with <u>Perl</u>, <u>PHP</u> and a little <u>Python</u>, issuing server commands with a <u>Command Line Interface (CLI)</u> over <u>SSH</u> connection and there's many more things I can add as I think of them but that's all that's coming to me right now.</p>
 <p class="lead">&nbsp; </p>
       <p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
