--- a/dreamjob.html
+++ b/dreamjob.html
@@ -45,11 +45,11 @@
 
 <p class="lead">Specific IT related software and technologies I'm experienced with include <u style="color: #B84602">Photoshop</u>, <u style="color: #B84602">Eclipse IDE</u>, <u style="color: #B84602">Dreamweaver</u>, <u style="color: #B84602">Microsoft Office</u>, <u style="color: #B84602">Wordpress</u>, <u style="color: #B84602">3D Studio MAX</u>, <u style="color: #B84602">Autodesk Sketchbook Pro</u>, <u style="color: #B84602">Cascading Style Sheets (CSS)</u> and their editing, <u style="color: #B84602">Bootstrap</u> and <u style="color: #B84602">Sass</u>, <u style="color: #B84602">HTML</u>, <u style="color: #B84602">Server-side Scripting</u> with <u style="color: #B84602">Perl</u>, <u style="color: #B84602">PHP</u> and a little <u style="color: #B84602">Python</u>, issuing server commands with a <u style="color: #B84602">Command Line Interface (CLI)</u> over <u style="color: #B84602">SSH</u> connection and there's many more things I can add as I think of them but that's all that's coming to me right now.</p>
 
-<p class="lead">&nbsp; </p>
-      <p class="lead">&nbsp;</p>
-      <p class="lead">&nbsp;</p>
-      <p class="lead">&nbsp;</p>
-      <p class="lead">&nbsp;</p>
+<p class="lead">Beyond IT specific skills I've accumulated over a lifetime of general interest, in my personal life I've always been attracted to beauty and seem to have been born with a natural eye for beautiful things as well as an aptitude for visual design that's seen me pursue and explore visually creative hobbies like painting, drawing and carving wood throughout the years, so exploring and playing with beautiful designs in web-sites is just an extension of that.</p>
+      <p class="lead">Of course beautiful women are the most beautiful thing of all and though I've tried in the past to <i>describe</i> in words the <i>indescrible</i> value that beauty holds - from a male perspective - I've always failed.</p>
+      <p class="lead">Sure I know, I'm veering off track here a bit though it's still within the confines of the topic of "visual appeal" and <i>deep-thought</i> has always been a preoccupation of mine: the juxtaposition of contemporary social attitudes (namely that men are not permitted to even recognise women generally as attractive) with the reality of being a biological organism who has evolved over millions of years to find women more attractive than <i>anything</i> else for the purpose of successful reproduction and that biological mechanism works *so* well that every beautiful woman to me is like a walking work of art.. but that's got nothing to do with IT anymore huh?</p>
+      <p class="lead">Philosophy, I should've enrolled in that..</p>
+      <p class="lead">Anyway, I'm pretty well-skilled in most things that interest me and being in possession of a 136 IQ makes learning new concepts and ideas fast easy for me - as long as that concept or idea is interesting enough for me to want to <b>start</b> learning it, natural intellectual curiosity will see me expand my knowledge through self-education anyway so I am a <i><b>super</b>-fast</i> learner.</p>
     </div>
   </div>
  <!-- footer div -->
